--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
-  "name": "routing-controllers",
-  "private": true,
+  "name": "@gem-mine/routing-controllers",
   "version": "0.7.8",
   "description": "Create structured, declarative and beautifully organized class-based controllers with heavy decorators usage for Express / Koa using TypeScript.",
   "license": "MIT",
@@ -68,6 +67,7 @@
     "gulp-typescript": "^3.1.6",
     "gulpclass": "^0.1.2",
     "handlebars": "^4.0.6",
+    "http2": "^3.3.7",
     "kcors": "^1.3.2",
     "koa": "^2.0.0",
     "koa-bodyparser": "^4.2.0",
@@ -90,7 +90,8 @@
     "typescript": "~2.7.2"
   },
   "scripts": {
-    "test": "cross-env NODE_ENV=test gulp tests"
+    "test": "cross-env NODE_ENV=test gulp tests",
+    "build": "gulp package"
   },
   "typings": "index.d.ts"
 }
