--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "template-url": "^1.0.0"
   },
   "devDependencies": {
+    "@koa/cors": "^2.2.3",
     "@types/chai": "^3.4.35",
     "@types/chai-as-promised": "0.0.30",
     "@types/express": "^4.0.35",
@@ -59,7 +60,6 @@
     "gulpclass": "^0.1.2",
     "handlebars": "^4.0.6",
     "http2": "^3.3.7",
-    "kcors": "^1.3.2",
     "koa": "^2.0.0",
     "koa-bodyparser": "^4.2.0",
     "koa-convert": "^1.2.0",
