--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@gem-mine/routing-controllers",
-  "version": "0.7.9",
+  "version": "0.7.10",
   "description": "Create structured, declarative and beautifully organized class-based controllers with heavy decorators usage for Express / Koa using TypeScript.",
   "license": "MIT",
   "readmeFilename": "README.md",
@@ -60,6 +60,7 @@
     "gulpclass": "^0.1.2",
     "handlebars": "^4.0.6",
     "http2": "^3.3.7",
+    "kcors": "^1.3.2",
     "koa": "^2.0.0",
     "koa-bodyparser": "^4.2.0",
     "koa-convert": "^1.2.0",
