--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@gem-mine/routing-controllers",
-  "version": "0.7.11",
+  "version": "0.7.13",
   "description": "Create structured, declarative and beautifully organized class-based controllers with heavy decorators usage for Express / Koa using TypeScript.",
   "license": "MIT",
   "readmeFilename": "README.md",
@@ -31,6 +31,7 @@
     "template-url": "^1.0.0"
   },
   "devDependencies": {
+    "@gem-mine/bodyparser": "^4.2.2",
     "@koa/cors": "^2.2.3",
     "@types/chai": "^3.4.35",
     "@types/chai-as-promised": "0.0.30",
@@ -62,7 +63,6 @@
     "http2": "^3.3.7",
     "kcors": "^1.3.2",
     "koa": "^2.0.0",
-    "koa-bodyparser": "^4.2.0",
     "koa-convert": "^1.2.0",
     "koa-multer": "^1.0.1",
     "koa-router": "^7.1.1",
